# TestProjects

./: LICENSE
000_Demo/: CMakeLists.txt  build_msvc2015_x64.bat  build_msvc2015_x86.bat  cleanup.bat  setting.txt
000_Demo/src/: Main.cpp  TestProcessor1.hpp  TestProcessor2.hpp
TestFramework/: CMakeLists.txt
TestFramework/3rd/: CConfig.txt
TestFramework/3rd/CConfig/: README.md
TestFramework/3rd/CConfig/source/: CConfig_Change.cfg  CConfig_Origin.cfg  CConfig_SaveAs.cfg  Demo.cpp
TestFramework/inc/: DumpGenerator.h  Framework.h  Processor.h  Setting.h
TestFramework/src/: DumpGenerator.cpp  Framework.cpp  Processor.cpp  Setting.cpp
